# CAS-gtk-tutorial

./: README.md
docs/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  README.md
docs/01 - Introduction/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md
docs/02 - Meson as build system/: 01.md  02.md  README.md
docs/03 - Flatpak: the future of app distribution/: 01.md  README.md
docs/04 - Designing User Interfaces/: 01.md  02.md  03.md  04.md  05.md  README.md
docs/05 - A Trivial Application/: 01.md  README.md
examples/01 - Introduction/01/: main.vala
examples/01 - Introduction/02/: main.vala
examples/01 - Introduction/03/: main.vala
examples/01 - Introduction/04/: main.vala
examples/01 - Introduction/05/: main.vala
examples/01 - Introduction/06/: main.vala
examples/01 - Introduction/07/: main.vala
examples/02/: my_first_app
examples/02 - Meson as build system/01/: Application.vala  main.vala  meson.build
examples/02 - Meson as build system/02/: Application.vala  meson.build
examples/03 - Flatpak/01/: io.github.diegoivanme.gtk-tutorial.json  meson.build
examples/03 - Flatpak/01/src/: window.vala
examples/04/: main.vala
examples/04 - Designing User Interfaces/01/src/: meson.build  window.ui
examples/04 - Designing User Interfaces/02/src/: Application.vala  gtk_tutorial.gresource.xml  main.vala  meson.build  window.ui
examples/04 - Designing User Interfaces/05/: meson.build
examples/05/: main.vala
examples/05 - A Trivial Application/01/: io.github.diegoivanme.toad.json  meson.build
examples/05 - A Trivial Application/01/src/: Application.vala  main.vala  meson.build  toad.gresource.xml  window.ui  window.vala
examples/06/: main.vala
(+17 files in other folders)
